templates/fabric-operator_template.yaml
---
# Source: fabric-operator/templates/rbac/auth_proxy_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: controller-manager-metrics-service
  namespace: baas-system
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    control-plane: controller-manager
---
# Source: fabric-operator/templates/webhook_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: baas-system
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    control-plane: controller-manager
---
# Source: fabric-operator/templates/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: baas-system
  labels:
    control-plane: controller-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
      name: controller-manager
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        control-plane: controller-manager
        name: controller-manager
    spec:
      containers:
      - command:
        - ibp-operator
        image: hyperledgerk8s/fabric-operator:7776e71
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8383
          timeoutSeconds: 5
        name: operator
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          
            initialDelaySeconds: 10
            periodSeconds: 5
            tcpSocket:
              port: 8383
            timeoutSeconds: 5
        resources:
          
            limits:
              cpu: 1
              ephemeral-storage: 1Gi
              memory: 512Mi
            requests:
              cpu: 1
              ephemeral-storage: 100Mi
              memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - CHOWN
            - FOWNER
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
          runAsUser: 1001
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /bestchains/chaincodes
          name: tardir
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      tolerations:
      
      - operator: Exists
      affinity:
      
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: Exists
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1001
      serviceAccount: operator-controller-manager
      serviceAccountName: operator-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - name: tardir
        emptyDir: {}
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
---
# Source: fabric-operator/templates/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: baas-system/operator-serving-cert
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /mutate-ibp-com-v1beta1-chaincode
  failurePolicy: Fail
  name: chaincode.mutate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - chaincodes
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /mutate-ibp-com-v1beta1-chaincodebuild
  failurePolicy: Fail
  name: chaincodebuild.mutate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - chaincodebuilds
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /mutate-ibp-com-v1beta1-channel
  failurePolicy: Fail
  name: channel.mutate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - channels
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /mutate-ibp-com-v1beta1-endorsepolicy
  failurePolicy: Fail
  name: endorsepolicy.mutate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - endorsepolicies
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /mutate-ibp-com-v1beta1-federation
  failurePolicy: Fail
  name: federation.mutate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - federations
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /mutate-ibp-com-v1beta1-network
  failurePolicy: Fail
  name: network.mutate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - networks
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /mutate-ibp-com-v1beta1-organization
  failurePolicy: Fail
  name: organization.mutate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - organizations
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /mutate-ibp-com-v1beta1-proposal
  failurePolicy: Fail
  name: proposal.mutate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - proposals
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /mutate-ibp-com-v1beta1-vote
  failurePolicy: Fail
  name: vote.mutate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - votes
  sideEffects: None
---
# Source: fabric-operator/templates/validatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: baas-system/operator-serving-cert
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /validate-ibp-com-v1beta1-chaincode
  failurePolicy: Fail
  name: chaincode.validate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - chaincodes
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /validate-ibp-com-v1beta1-chaincodebuild
  failurePolicy: Fail
  name: chaincodebuild.validate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - chaincodebuilds
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /validate-ibp-com-v1beta1-channel
  failurePolicy: Fail
  name: channel.validate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - channels
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /validate-ibp-com-v1beta1-endorsepolicy
  failurePolicy: Fail
  name: endorsepolicy.validate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - endorsepolicies
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /validate-ibp-com-v1beta1-federation
  failurePolicy: Fail
  name: federation.validate.webhook
  rules:
  - apiGroups:
    - ibp.ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - federations
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /validate-ibp-com-v1beta1-network
  failurePolicy: Fail
  name: network.validate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - networks
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /validate-ibp-com-v1beta1-organization
  failurePolicy: Fail
  name: organization.validate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - organizations
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /validate-ibp-com-v1beta1-proposal
  failurePolicy: Fail
  name: proposal.validate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - proposals
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: baas-system
      path: /validate-ibp-com-v1beta1-vote
  failurePolicy: Fail
  name: vote.validate.webhook
  rules:
  - apiGroups:
    - ibp.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - votes
  sideEffects: None
